compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__conditional_compilation__excluded_attribute_syntax.snap
---
source: compiler-core/src/erlang/tests/conditional_compilation.rs
expression: "@target(javascript)\n  pub fn main() { 1 }\n"
---
----- SOURCE CODE
@target(javascript)
  pub fn main() { 1 }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
