compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__conditional_compilation__included_attribute_syntax.snap
---
source: compiler-core/src/erlang/tests/conditional_compilation.rs
expression: "@target(erlang)\n  pub fn main() { 1 }\n"
---
----- SOURCE CODE
@target(erlang)
  pub fn main() { 1 }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    1.
